@@ -11,5 +11,4 @@ PoDoFo 0.3
        - PdfPage should use PdfObject::GetParent instead of having an own one
        - PdfVecObject should be able to have a PdfDocument as parent so that
        PdfPage does not need to keep a PdfDocument pointer.
-       - PdfParser should not have an Init method
 
